# case-match

./: .dockerignore  .env.example  .gitignore  ADD.TXT  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  requirements.txt
backend/src/: __init__.py  app.py  config.py
backend/src/api/: __init__.py  setup.py
backend/src/api/controllers/: __init__.py  search.controller.py
backend/src/api/middlewares/: validation.middleware.py
backend/src/config/: __init__.py  config.py  constants.py
backend/src/domain/: __init__.py
backend/src/infrastructure/: __init__.py  chroma_client.py  courtlistener_client.py  embedding_client.py  langfuse_client.py  reranker_client.py
backend/src/pipeline/: __init__.py  query_pipeline.py
backend/src/prompts/: __init__.py  rag.py
backend/src/repositories/: __init__.py  chroma_repository.py  embedding_repository.py
backend/src/schemas/: __init__.py  analyze.py  chunk.py  document.py  query.py  search_result.py
backend/src/services/: __init__.py  index_service.py  rag_service.py  retrieval_service.py
backend/src/utils/: __init__.py  chunking.py  embedding_sanity.py  logger.py  text.py
examples/: new_case.txt  sample_case.txt
frontend/: .dockerignore  .env.example  README.md  index.html
scripts/: decision_support.py  find_best_match.py  match_case_file.py  query_cli.py  rag_analysis.py  rebuild_first_courtlistener_cases.py  reset_index_and_data.py  show_index.py  verify_docker.ps1
tests/unit/: test_chunking.py
(+18 files in other folders)
